DRC/include/ll/Core.h

LLEXPORT ЛЛЗначение LLConstNSWNeg(ЛЛЗначение ConstantVal);
LLEXPORT ЛЛЗначение LLConstNUWNeg(ЛЛЗначение ConstantVal) ;
LLEXPORT ЛЛЗначение LLConstNSWAdd(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstNUWAdd(ЛЛЗначение LHSConstant,  ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstNSWSub(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstNUWSub(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstNSWMul(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstNUWMul(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstURem(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstSRem(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstFRem(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant);
LLEXPORT ЛЛЗначение LLConstAShr(ЛЛЗначение LHSConstant, ЛЛЗначение RHSConstant) ;
LLEXPORT ЛЛЗначение LLConstGEP(ЛЛЗначение ConstantVal,
ЛЛЗначение *ConstantIndices, unsigned NumIndices);
LLEXPORT ЛЛЗначение LLConstInBoundsGEP(ЛЛЗначение ConstantVal, ЛЛЗначение *ConstantIndices,
                                  unsigned NumIndices);