DRC/src/ll/Core.d


/**
 * @defgroup LLVMCCoreValueConstantExpressions Константные Выражения
 *
 * Functions in this group correspond to APIs on llvm::ConstantExpr.
 *
 * @see llvm::ConstantExpr.
 *
 * @{
 */
ЛЛОпкод ЛЛДайКонстОпкод(ЛЛЗначение констЗнач);
ЛЛЗначение ЛЛРаскладУ(ЛЛТип тип);
ЛЛЗначение ЛЛРазмерУ(ЛЛТип тип);
ЛЛЗначение ЛЛКонстОтр(ЛЛЗначение констЗнач);
ЛЛЗначение LLConstNSWNeg(ЛЛЗначение констЗнач);
ЛЛЗначение LLConstNUWNeg(ЛЛЗначение констЗнач);
ЛЛЗначение ЛЛКонстПОтриц(ЛЛЗначение констЗнач);
ЛЛЗначение ЛЛКонстНе(ЛЛЗначение констЗнач);
ЛЛЗначение ЛЛКонстДобавь(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstNSWAdd(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstNUWAdd(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстПСложи(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстОтними(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstNSWSub(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstNUWSub(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстПОтними(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстУмножь(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstNSWMul(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstNUWMul(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстПУмножь(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстБДели(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстТочноБДели(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстЗДели(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстТочноЗДели(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстПДели(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstURem(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstSRem(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstFRem(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстИ(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстИли(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстИИли(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстЦСравн(ЛЛЦелПредикат предикат,
                           ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстПСравн(ЛЛПредикатРеала предикат,
                           ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстСдвл(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение ЛЛКонстСдвп(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstAShr(ЛЛЗначение константаLHS, ЛЛЗначение константаRHS);
ЛЛЗначение LLConstGEP(ЛЛЗначение констЗнач,
                          ЛЛЗначение *ConstantIndices, бцел члоИндексов);
ЛЛЗначение LLConstGEP2(ЛЛТип тип, ЛЛЗначение констЗнач,
                           ЛЛЗначение *ConstantIndices, бцел члоИндексов);
ЛЛЗначение LLConstInBoundsGEP(ЛЛЗначение констЗнач,
                                  ЛЛЗначение *ConstantIndices,
                                  бцел члоИндексов);
ЛЛЗначение LLConstInBoundsGEP2(ЛЛТип тип, ЛЛЗначение констЗнач,
                                   ЛЛЗначение *ConstantIndices,
                                   бцел члоИндексов);
ЛЛЗначение ЛЛКонстОбрежь(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстЗРасш(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстНРасш(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстПЗОбрежь(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстПЗРасш(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстБЦвПЗ(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстЗЦвПЗ(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстПЗвБЦ(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстПЗвЗЦ(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстУкзВЦел(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстЦелВУкз(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстБитКаст(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстАдрПрострКаст(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстНРасшИлиБитКаст(ЛЛЗначение констЗнач,
                                    ЛЛТип вТип);
ЛЛЗначение ЛЛКонстЗРасшИлиБитКаст(ЛЛЗначение констЗнач,
                                    ЛЛТип вТип);
ЛЛЗначение ЛЛКонстОбрежьИлиБитКаст(ЛЛЗначение констЗнач,
                                     ЛЛТип вТип);
ЛЛЗначение ЛЛКонстУказательКаст(ЛЛЗначение констЗнач,
                                  ЛЛТип вТип);
ЛЛЗначение ЛЛКонстЦелКаст(ЛЛЗначение констЗнач, ЛЛТип вТип,
                              ЛЛБул соЗнаком_ли);
ЛЛЗначение ЛЛКонстПЗКаст(ЛЛЗначение констЗнач, ЛЛТип вТип);
ЛЛЗначение ЛЛКонстВыбор(ЛЛЗначение ConstantCondition,
                             ЛЛЗначение ConstantIfTrue,
                             ЛЛЗначение ConstantIfFalse);
ЛЛЗначение ЛЛКонстИзвлекиЭлемент(ЛЛЗначение VectorConstant,
                                     ЛЛЗначение IndexConstant);
ЛЛЗначение ЛЛКонстВставьЭлемент(ЛЛЗначение VectorConstant,
                                    ЛЛЗначение ElementValueConstant,
                                    ЛЛЗначение IndexConstant);
ЛЛЗначение ЛЛКонстШафлВектор(ЛЛЗначение VectorAConstant,
                                    ЛЛЗначение VectorBConstant,
                                    ЛЛЗначение MaskConstant);
ЛЛЗначение ЛЛКонстИзвлекиЗначение(ЛЛЗначение AggConstant, бцел *IdxList,
                                   бцел NumIdx);
ЛЛЗначение ЛЛКонстВставьЗначение(ЛЛЗначение AggConstant,
                                  ЛЛЗначение ElementValueConstant,
                                  бцел *IdxList, бцел NumIdx);
ЛЛЗначение ЛЛАдрБлока(ЛЛЗначение ф, ЛЛБазовыйБлок ББ);

/** Депрекировано: Use LLVMGetInlineAsm instead. */
ЛЛЗначение ЛЛКонстИнлайнАсм(ЛЛТип тип, ткст0 ткстАсм, ткст0 констрейнты,
                                ЛЛБул естьПобЭффект, ЛЛБул естьСтэкРаскладки);

/**
 * @}
 */

/**
 * @defgroup LLVMCCoreValueConstantGlobals глоб Values
 *
 * This group contains functions that operate on global values. Functions in
 * this group relate to functions in the llvm::GlobalValue class tree.
 *
 * @see llvm::GlobalValue
 *
 * @{
 */

ЛЛМодуль ЛЛДайГлобРодителя(ЛЛЗначение глоб);
ЛЛБул ЛЛДекларация_ли(ЛЛЗначение глоб);
ЛЛКомпоновка ЛЛДайКомпоновку(ЛЛЗначение глоб);
проц ЛЛУстКомпоновку(ЛЛЗначение глоб, ЛЛКомпоновка компоновка);
ткст0 ЛЛДайСекцию(ЛЛЗначение глоб);
проц ЛЛУстСекцию(ЛЛЗначение глоб, ткст0 секция);
ЛЛВидимость ЛЛДайВидимость(ЛЛЗначение глоб);
проц ЛЛУстВидимость(ЛЛЗначение глоб, ЛЛВидимость вид);
ЛЛКлассХранДЛЛ ЛЛДайКлассХраненияДЛЛ(ЛЛЗначение глоб);
проц ЛЛУстКлассХраненияДЛЛ(ЛЛЗначение глоб, ЛЛКлассХранДЛЛ класс);
ЛЛБезымАдрес ЛЛДайБезымянныйАдрес(ЛЛЗначение глоб);
проц ЛЛУстБезымянныйАдрес(ЛЛЗначение глоб, ЛЛБезымАдрес безымАдр);

/**
 * Returns the "знач type" of a global знач.  This differs from the formal
 * type of a global знач which is always a pointer type.
 *
 * @see llvm::GlobalValue::getValueType()
 */
ЛЛТип ЛЛГлобДайТипЗначения(ЛЛЗначение глоб);

/** Депрекировано: Use LLVMGetUnnamedAddress instead. */
ЛЛБул ЛЛЕстьБезымянныйАдр(ЛЛЗначение глоб);
/** Депрекировано: Use LLVMSetUnnamedAddress instead. */
проц ЛЛУстБезымянныйАдр(ЛЛЗначение глоб, ЛЛБул естьБезымАдр_ли);

/**
 * @defgroup LLVMCCoreValueWithAlignment Values with alignment
 *
 * Functions in this group only apply to values with alignment, i.e.
 * global variables, load and store instructions.
 */

/**
 * Obtain the preferred alignment of the знач.
 * @see llvm::AllocaInst::getAlignment()
 * @see llvm::LoadInst::getAlignment()
 * @see llvm::StoreInst::getAlignment()
 * @see llvm::GlobalValue::getAlignment()
 */
бцел ЛЛДайРаскладку(ЛЛЗначение З);

/**
 * Set the preferred alignment of the знач.
 * @see llvm::AllocaInst::setAlignment()
 * @see llvm::LoadInst::setAlignment()
 * @see llvm::StoreInst::setAlignment()
 * @see llvm::GlobalValue::setAlignment()
 */
проц ЛЛУстРаскладку(ЛЛЗначение З, бцел байты);

/**
 * Sets a metadata attachment, erasing the existing metadata attachment if
 * it already exists for the given kind.
 *
 * @see llvm::GlobalObject::setMetadata()
 */
проц ЛЛГлоб_УстановиМетаданные(ЛЛЗначение глоб, бцел род, ЛЛМетаданные МД);

/**
 * Erases a metadata attachment of the given kind if it exists.
 *
 * @see llvm::GlobalObject::eraseMetadata()
 */
проц ЛЛГлоб_СотриМетаданные(ЛЛЗначение глоб, бцел род);

/**
 * Removes all metadata attachments from this знач.
 *
 * @see llvm::GlobalObject::clearMetadata()
 */
проц ЛЛГлоб_СбросьМетаданные(ЛЛЗначение глоб);

/**
 * Retrieves an array of metadata entries representing the metadata attached to
 * this знач. The caller is responsible for freeing this array by calling
 * \конст LLVMDisposeValueMetadataEntries.
 *
 * @see llvm::GlobalObject::getAllMetadata()
 */
ЛЛЗаписьМетаданныхЗначения *ЛЛГлоб_КопируйВсеМетаданные(ЛЛЗначение знач,
                                                  т_мера *члоЗапп);

/**
 * Удалить записи метаданных значений.
 */
проц ЛЛВыместиЗаписиМетаданныхЗначения(ЛЛЗаписьМетаданныхЗначения *записи);

/**
 * Returns the kind of a знач metadata entry at a specific инд.
 */
бцел ЛЛЗначение_ЗаписиМетаданных_ДайРод(ЛЛЗаписьМетаданныхЗначения *записи,
                                         бцел индекс);

/**
 * Returns the underlying metadata node of a знач metadata entry at a
 * specific инд.
 */
ЛЛМетаданные
ЛЛЗначение_ЗаписиМетаданных_ДайМетаданные(ЛЛЗаписьМетаданныхЗначения *записи,
                                    бцел индекс);

/**
 * @}
 */

/**
 * @defgroup LLVMCoreValueConstantGlobalVariable глоб Variables
 *
 * This group contains functions that operate on global variable values.
 *
 * @see llvm::GlobalVariable
 *
 * @{
 */
ЛЛЗначение ЛЛДобавьГлоб(ЛЛМодуль м, ЛЛТип тип, ткст0 имя);
ЛЛЗначение ЛЛДобавьГлобВАдрПрострво(ЛЛМодуль м, ЛЛТип тип, ткст0 имя,
                                         бцел адрПрострво);
ЛЛЗначение ЛЛДайИменованныйГлоб(ЛЛМодуль м, ткст0 имя);
ЛЛЗначение ЛЛДайПервыйГлоб(ЛЛМодуль м);
ЛЛЗначение ЛЛДайПоследнийГлоб(ЛЛМодуль м);
ЛЛЗначение ЛЛДайСледщГлоб(ЛЛЗначение глобПеремн);
ЛЛЗначение ЛЛДайПредшГлоб(ЛЛЗначение глобПеремн);
проц ЛЛУдалиГлоб(ЛЛЗначение глобПеремн);
ЛЛЗначение ЛЛДайИнициализатор(ЛЛЗначение глобПеремн);
проц ЛЛУстИнициализатор(ЛЛЗначение глобПеремн, ЛЛЗначение констЗнач);
ЛЛБул ЛЛНителок_ли(ЛЛЗначение глобПеремн);
проц ЛЛУстНителок(ЛЛЗначение глобПеремн, ЛЛБул нителок_ли);
ЛЛБул ЛЛГлобКонст_ли(ЛЛЗначение глобПеремн);
проц ЛЛУстГлобКонст(ЛЛЗначение глобПеремн, ЛЛБул конст_ли);
ЛЛНителокРежим ЛЛДайНителокРежим(ЛЛЗначение глобПеремн);
проц ЛЛУстНителокРежим(ЛЛЗначение глобПеремн, ЛЛНителокРежим режим);
ЛЛБул ЛЛИзвнеИнициализуем_ли(ЛЛЗначение глобПеремн);
проц ЛЛУстИзвнеИнициализуем(ЛЛЗначение глобПеремн, ЛЛБул расшИниц_ли);

/**
 * @}
 */

/**
 * @defgroup LLVMCoreValueConstantGlobalAlias глоб Aliases
 *
 * This group contains function that operate on global alias values.
 *
 * @see llvm::GlobalAlias
 *
 * @{
 */
ЛЛЗначение ЛЛДобавьНик(ЛЛМодуль м, ЛЛТип тип, ЛЛЗначение ники, ткст0 имя);

/**
 * Obtain a GlobalAlias знач from a Module by its name.
 *
 * The returned знач corresponds to a llvm::GlobalAlias знач.
 *
 * @see llvm::Module::getNamedAlias()
 */
ЛЛЗначение ЛЛДайИменованГлобНик(ЛЛМодуль м, ткст0 имя, т_мера длинаИм);

/**
 * Obtain an iterator to the first GlobalAlias in a Module.
 *
 * @see llvm::Module::alias_begin()
 */
ЛЛЗначение ЛЛДайПервыйГлобНик(ЛЛМодуль м);

/**
 * Obtain an iterator to the last GlobalAlias in a Module.
 *
 * @see llvm::Module::alias_end()
 */
ЛЛЗначение ЛЛДайПоследнийГлобНик(ЛЛМодуль м);

/**
 * Advance a GlobalAlias iterator to the next GlobalAlias.
 *
 * Returns NULL if the iterator was already at the end and there are no more
 * global aliases.
 */
ЛЛЗначение ЛЛДайСледщГлобНик(ЛЛЗначение гА);
